...
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary">

                <ImageView
                    android:id="@+id/iv_detail_poster_bg"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:contentDescription="@string/movie_tv_show_backdrop"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
...
                    android:id="@+id/action_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp">

                    <ImageView
                        android:id="@+id/btn_back"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/back_button"
                        android:elevation="2dp"
                        android:src="@drawable/ic_arrow_left"
...
                        android:layout_height="wrap_content"
                        android:elevation="2dp"
                        android:text="@string/category"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="@id/btn_back"
                        app:layout_constraintEnd_toStartOf="@id/btn_share"
                        app:layout_constraintStart_toEndOf="@id/btn_back"
                        app:layout_constraintTop_toTopOf="@id/btn_back" />

                    <ToggleButton
                        android:id="@+id/toggle_favorite"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/favorite_toggle"
                        android:backgroundTint="@color/white"
                        android:elevation="2dp"
...
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toEndOf="@+id/poster_parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_label_duration" />

                    <TextView
                        android:id="@+id/tv_detail_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="1dp"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
...
                        android:elevation="4dp"
                        app:cardCornerRadius="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/iv_detail_poster"
                            android:layout_width="140dp"
                            android:layout_height="210dp"
                            android:contentDescription="@string/movie_tv_show_poster"
                            android:elevation="2dp"
                            android:scaleType="fitStart"
                            android:src="@color/placeholder" />

                    </androidx.cardview.widget.CardView>


                    <TextView
                        android:id="@+id/tv_detail_genre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:ellipsize="end"
...
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="@+id/tv_detail_genre"
                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_genre" />

                    <TextView
                        android:id="@+id/tv_detail_duration"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:textColor="@color/white"
                        android:textSize="16sp"
...
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="@+id/tv_detail_duration"
                        app:layout_constraintTop_toBottomOf="@id/tv_detail_duration" />

                    <TextView
                        android:id="@+id/tv_detail_quote"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:textAlignment="center"
                        android:layout_marginTop="32dp"
...
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/poster_parent"
                        tools:text="'A Beautiful Quote'" />

                    <TextView
                        android:id="@+id/tv_detail_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_detail_quote"
                        tools:text="@string/title" />

                    <TextView
                        android:id="@+id/tv_detail_description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/tv_detail_title"
                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_title"
                        tools:text="@string/description" />

                    <TextView
                        android:id="@+id/tv_detail_release"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@+id/tv_detail_description"
...
